login,event,faq,signup,fragments controller html 페이지 기본틀 제작

--- a/DYEat/src/main/resources/templates/layouts/fragments/Nav.html
+++ b/DYEat/src/main/resources/templates/layouts/fragments/Nav.html
@@ -2,7 +2,7 @@
 <html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
 <th:block th:fragment="NavFragment">
-    <!-- Topbar Start -->
+    <!-- 툴바 시작 -->
     <div class="container-fluid px-0 d-none d-lg-block">
         <div class="row gx-0">
             <div class="d-flex justify-content-between" style="width: 100%;">
@@ -14,23 +14,23 @@
                             <img style="width: 80px;" th:src="@{/assets/img/main_icon.png}">DoyouEat</h2></a>
                 </div>
                 <div class="d-inline-flex align-items-center justify-content-center">
-                    <a th:href="@{/main}" class="navbar-brand">
-                        <h1><i class="bi bi-person-fill"></i></h1>
+                    <a th:href="@{/mypage}" class="navbar-brand">
+                        <h1><i style="margin-right: 30px;" class="bi bi-person-fill"></i></h1>
                     </a>
-                    <a th:href="@{/main}" class="navbar-brand">
-                        <h1><i class="bi bi-bag-fill"></i></h1>
+                    <a th:href="@{/mybag}" class="navbar-brand">
+                        <h1><i style="margin-right: 30px;" class="bi bi-bag-fill"></i></h1>
                     </a>
                 </div>
             </div>
         </div>
     </div>
-    <!-- Topbar End -->
+    <!-- 툴바 끝 -->
 
 
-    <!-- Navbar Start -->
+    <!-- 네비게이션 시작 -->
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark shadow-sm py-3 py-lg-0 px-3 px-lg-0">
         <a href="index.html" class="navbar-brand d-block d-lg-none">
-            <h1 class="m-0 text-uppercase text-white"><i class="fa fa-birthday-cake fs-1 text-primary me-3"></i>CakeZone
+            <h1 class="m-0 text-uppercase text-white"><img style="width: 80px;" th:src="@{/assets/img/main_icon.png}">DoyouEat
             </h1>
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
@@ -48,10 +48,10 @@
                 <a href="about.html" class="nav-item nav-link">이달의 식단</a>
                 <a href="menu.html" class="nav-item nav-link">이벤트</a>
                 <a href="team.html" class="nav-item nav-link">주문하기</a>
-                <a href="contact.html" class="nav-item nav-link">고객센터</a>
+                <a th:href="@{/faq}" class="nav-item nav-link">고객센터</a>
             </div>
         </div>
     </nav>
-    <!-- Navbar End -->
+    <!-- 네비게이션 끝 -->
 </th:block>
 </html>
