--- a/DYEat/src/main/resources/templates/layouts/layout.html
+++ b/DYEat/src/main/resources/templates/layouts/layout.html
@@ -8,7 +8,7 @@
 <th:block th:replace="/layouts/fragments/Nav :: NavFragment"></th:block>
 <th:block layout:fragment="content"></th:block>
 <!--<th:block th:replace="/layouts/fragments/footer :: footerFragment"></th:block>-->
-<!--<th:block th:replace="/layouts/fragments/script :: scriptFragment"></th:block>-->
+<th:block th:replace="/layouts/fragments/scripts :: scriptFragment"></th:block>
 </body>
 
 </html>
