--- a/DYEat/src/main/resources/templates/layouts/fragments/head.html
+++ b/DYEat/src/main/resources/templates/layouts/fragments/head.html
@@ -4,22 +4,21 @@
     <head>
         <title>DoyouEat?</title>
         <link rel="stylesheet" th:href="@{/assets/bootstrap/css/bootstrap.min.css}">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700&amp;display=swap">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Kaushan+Script&amp;display=swap">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Sans+Tamil+Supplement&amp;display=swap">
+        <link href="https://fonts.googleapis.com/css?family=Roboto:300,400&display=swap" rel="stylesheet">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&family=Oswald:wght@500;600;700&family=Pacifico&display=swap" rel="stylesheet">
-
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet">
+        <link href="https://getbootstrap.com/docs/5.2/assets/css/docs.css" rel="stylesheet">
         <!-- Icon Font Stylesheet -->
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
-
+        <link th:href="@{/assets/fonts/login/font-awesome.min.css}" rel="stylesheet">
         <!-- Libraries Stylesheet -->
         <link th:href="@{/assets/lib/owlcarousel/assets/owl.carousel.min.css}" rel="stylesheet">
-
         <!-- Template Stylesheet -->
         <link th:href="@{/assets/css/style.css}" rel="stylesheet">
+        <link th:href="@{/assets/css/logincss/login.css}" rel="stylesheet">
     </head>
 </th:block>
 </html>
