event , monthfood 페이지 및 컨트롤러 추가

--- a/DYEat/src/main/resources/templates/views/event/event.html
+++ b/DYEat/src/main/resources/templates/views/event/event.html
@@ -4,7 +4,109 @@
       layout:decorate="~{/layouts/layout}">
 <th:block layout:fragment="content">
     <body>
-
-
+    <div class="card">
+        <div class="card-header d-xxl-flex justify-content-xxl-center">
+            <ul class="nav nav-tabs card-header-tabs d-xxl-flex justify-content-xxl-center" role="tablist" style="width: 50%;">
+                <li class="nav-item" style="width: 50%;"><a id="item-1-1-tab" class="nav-link active" role="tab" aria-controls="item-1-1" aria-selected="true" href="#item-1-1" data-bs-toggle="tab">진행중인 이벤트</a></li>
+                <li class="nav-item" style="width: 50%;"><a id="item-1-2-tab" class="nav-link" role="tab" aria-controls="item-1-2" aria-selected="false" href="#item-1-2" data-bs-toggle="tab" style="text-align: center;">종료된 이벤트</a></li>
+            </ul>
+        </div>
+        <div class="card-body">
+            <div id="nav-tabContent" class="tab-content">
+                <div id="item-1-1" class="tab-pane fade show active" role="tabpanel" aria-labelledby="item-1-1-tab">
+                    <section class="py-5">
+                        <div class="container py-5">
+                            <div class="row mb-5">
+                                <div class="col-md-8 col-xl-6 text-center mx-auto">
+                                    <h2 class="fw-bold">진행 중인 이벤트</h2>
+                                    <p class="text-muted">다양한 할인과 혜택을 경험해보세요</p>
+                                </div>
+                            </div>
+                            <div class="row row-cols-1 row-cols-md-2 mx-auto" style="max-width: 900px;">
+                                <div class="col mb-4">
+                                    <div><a class="active" href="#"><img class="rounded img-fluid shadow w-100 fit-cover" src="products/1.jpg" style="height: 250px;" /></a>
+                                        <div class="py-4"><span class="badge bg-primary mb-2">Website</span>
+                                            <h4 class="fw-bold">Lorem libero donec</h4>
+                                            <p class="text-muted">Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col mb-4">
+                                    <div><a href="#"><img class="rounded img-fluid shadow w-100 fit-cover" src="products/2.jpg" style="height: 250px;" /></a>
+                                        <div class="py-4"><span class="badge bg-primary mb-2">Website</span>
+                                            <h4 class="fw-bold">Lorem libero donec</h4>
+                                            <p class="text-muted">Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col mb-4">
+                                    <div><a href="#"><img class="rounded img-fluid shadow w-100 fit-cover" src="products/3.jpg" style="height: 250px;" /></a>
+                                        <div class="py-4"><span class="badge bg-primary mb-2">Website</span>
+                                            <h4 class="fw-bold">Lorem libero donec</h4>
+                                            <p class="text-muted">Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col mb-4">
+                                    <div><a href="#"><img class="rounded img-fluid shadow w-100 fit-cover" src="products/1.jpg" style="height: 250px;" /></a>
+                                        <div class="py-4"><span class="badge bg-primary mb-2">Website</span>
+                                            <h4 class="fw-bold">Lorem libero donec</h4>
+                                            <p class="text-muted">Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </section>
+                </div>
+                <div id="item-1-2" class="tab-pane fade" role="tabpanel" aria-labelledby="item-1-2-tab">
+                    <section class="py-5">
+                        <div class="container py-5">
+                            <div class="row mb-5">
+                                <div class="col-md-8 col-xl-6 text-center mx-auto">
+                                    <h2 class="fw-bold">Heading</h2>
+                                    <p class="text-muted">Curae hendrerit donec commodo hendrerit egestas tempus, turpis facilisis nostra nunc. Vestibulum dui eget ultrices.</p>
+                                </div>
+                            </div>
+                            <div class="row row-cols-1 row-cols-md-2 mx-auto" style="max-width: 900px;">
+                                <div class="col mb-4">
+                                    <div><a class="active" href="#"><img class="rounded img-fluid shadow w-100 fit-cover" src="products/1.jpg" style="height: 250px;" /></a>
+                                        <div class="py-4"><span class="badge bg-primary mb-2">Website</span>
+                                            <h4 class="fw-bold">Lorem libero donec</h4>
+                                            <p class="text-muted">Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col mb-4">
+                                    <div><a href="#"><img class="rounded img-fluid shadow w-100 fit-cover" src="products/2.jpg" style="height: 250px;" /></a>
+                                        <div class="py-4"><span class="badge bg-primary mb-2">Website</span>
+                                            <h4 class="fw-bold">Lorem libero donec</h4>
+                                            <p class="text-muted">Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col mb-4">
+                                    <div><a href="#"><img class="rounded img-fluid shadow w-100 fit-cover" src="products/3.jpg" style="height: 250px;" /></a>
+                                        <div class="py-4"><span class="badge bg-primary mb-2">Website</span>
+                                            <h4 class="fw-bold">Lorem libero donec</h4>
+                                            <p class="text-muted">Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col mb-4">
+                                    <div><a href="#"><img class="rounded img-fluid shadow w-100 fit-cover" src="products/1.jpg" style="height: 250px;" /></a>
+                                        <div class="py-4"><span class="badge bg-primary mb-2">Website</span>
+                                            <h4 class="fw-bold">Lorem libero donec</h4>
+                                            <p class="text-muted">Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </section>
+                </div>
+            </div>
+        </div>
+    </div>
     </body>
 </th:block>
