--- a/DYEat/src/main/resources/templates/layouts/fragments/Nav.html
+++ b/DYEat/src/main/resources/templates/layouts/fragments/Nav.html
@@ -45,8 +45,8 @@
                         <a href="testimonial.html" class="dropdown-item">Testimonial</a>
                     </div>
                 </div>
-                <a href="about.html" class="nav-item nav-link">이달의 식단</a>
-                <a href="menu.html" class="nav-item nav-link">이벤트</a>
+                <a th:href="@{/monthfood}" class="nav-item nav-link">이달의 식단</a>
+                <a th:href="@{/event}" class="nav-item nav-link">이벤트</a>
                 <a href="team.html" class="nav-item nav-link">주문하기</a>
                 <a th:href="@{/faq}" class="nav-item nav-link">고객센터</a>
             </div>
