pay,orderDetail,main 의 Controller 및 html 제작
추후 개발사항
orderList, signup ,mybag,mypage Controller 제작

--- a/DYEat/src/main/resources/templates/layouts/fragments/head.html
+++ b/DYEat/src/main/resources/templates/layouts/fragments/head.html
@@ -4,11 +4,14 @@
     <head>
         <title>DoyouEat?</title>
         <link rel="stylesheet" th:href="@{/assets/bootstrap/css/bootstrap.min.css}">
+        <link rel="stylesheet" href="/assets/bootstrap/css/bootstrap.min.css">
+        <link rel="stylesheet" th:href="@{/assets/fonts/fontawesome-all.min.css}">
+        <link rel="stylesheet" th:href="@{/assets/fonts/font-awesome.min.css}">
+        <link rel="stylesheet" th:href="@{/assets/fonts/fontawesome5-overrides.min.css}">
         <link href="https://fonts.googleapis.com/css?family=Roboto:300,400&display=swap" rel="stylesheet">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&family=Oswald:wght@500;600;700&family=Pacifico&display=swap" rel="stylesheet">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet">
         <link href="https://getbootstrap.com/docs/5.2/assets/css/docs.css" rel="stylesheet">
         <!-- Icon Font Stylesheet -->
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
@@ -19,6 +22,10 @@
         <!-- Template Stylesheet -->
         <link th:href="@{/assets/css/style.css}" rel="stylesheet">
         <link th:href="@{/assets/css/logincss/login.css}" rel="stylesheet">
+        <link rel="stylesheet" th:href="@{/assets/css/Pretty-Footer-.css}">
+        <link rel="stylesheet" th:href="@{/assets/css/Image-Tab-Gallery-Horizontal.css}">
+        <link rel="stylesheet" th:href="@{/assets/css/Minimal-tabs-styles.css}">
+        <link rel="stylesheet" th:href="@{/assets/css/Minimal-tabs.css}">
     </head>
 </th:block>
 </html>
