--- a/DYEat/src/main/resources/templates/layouts/fragments/scripts.html
+++ b/DYEat/src/main/resources/templates/layouts/fragments/scripts.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <th:block th:fragment="scriptFragment">
-    <script th:src="@{assets/js/jquery-3.3.1.min.js}"></script>
-    <script th:src="@{assets/bootstrap/js/bootstrap.min.js}"></script>
-    <script th:src="@{assets/js/main.js}"></script>
+    <script th:src="@{/assets/js/jquery-3.3.1.min.js}"></script>
+    <script th:src="@{/assets/bootstrap/js/bootstrap.min.js}"></script>
+    <script th:src="@{/assets/js/main.js}"></script>
+    <script th:src="@{/assets/js/bold-and-bright.js}"></script>
+    <script src="https://cdn.datatables.net/1.10.15/js/dataTables.bootstrap.min.js"></script>
+    <script th:src="@{/assets/js/Image-Tab-Gallery-Horizontal.js}"></script>
 </th:block>
 </html>
