--- a/DYEat/src/main/resources/templates/layouts/fragments/Nav.html
+++ b/DYEat/src/main/resources/templates/layouts/fragments/Nav.html
@@ -14,6 +14,9 @@
                             <img style="width: 80px;" th:src="@{/assets/img/main_icon.png}">DoyouEat</h2></a>
                 </div>
                 <div class="d-inline-flex align-items-center justify-content-center">
+                    <a th:href="@{/login}" class="navbar-brand">
+                        <h1><i style="margin-right: 30px;" class="bi bi-box-arrow-in-right"></i></h1>
+                    </a>
                     <a th:href="@{/mypage}" class="navbar-brand">
                         <h1><i style="margin-right: 30px;" class="bi bi-person-fill"></i></h1>
                     </a>
