main page 배너 사진 추가, mybag , mypage order Controller 및 html 페이지 기본 구조 완료
진행 상황 : 프론트 페이지 전반적인 기본 구조 작업완료
추후 작업 : 엔티티 작업 및 프론트 디테일 수정

--- a/DYEat/src/main/resources/templates/views/order/orderList.html
+++ b/DYEat/src/main/resources/templates/views/order/orderList.html
@@ -4,5 +4,110 @@
       layout:decorate="~{/layouts/layout}">
 <th:block layout:fragment="content">
     <body>
+    <div class="card">
+        <div class="card-header">
+            <ul class="nav nav-tabs card-header-tabs text-center" role="tablist">
+                <li class="nav-item"><a class="nav-link active" id="item-1-1-tab" role="tab" aria-controls="item-1-1" aria-selected="true" href="#item-1-1" data-bs-toggle="tab">정식</a></li>
+                <li class="nav-item"><a class="nav-link" id="item-1-2-tab" role="tab" aria-controls="item-1-2" aria-selected="false" href="#item-1-2" data-bs-toggle="tab">단품</a></li>
+            </ul>
+        </div>
+        <div class="card-body">
+            <div id="nav-tabContent" class="tab-content">
+                <div id="item-1-1" class="tab-pane fade show active" role="tabpanel" aria-labelledby="item-1-1-tab">
+                    <section class="photo-gallery py-4 py-xl-5">
+                        <div class="container">
+                            <div class="row mb-5">
+                                <div class="col-md-8 col-xl-6 text-center mx-auto" style="text-align: left;">
+                                    <h2 style="text-align: center;font-family: Adamina, serif;font-weight: bold;">정기 배송 한정식</h2>
+                                    <p class="w-lg-50"></p>
+                                </div>
+                            </div>
+                            <div class="row gx-2 gy-2 row-cols-1 row-cols-md-2 row-cols-xl-3 photos" data-bss-baguettebox="">
+                                <div class="col offset-xl-1 offset-xxl-1 item"><a href="https://cdn.bootstrapstudio.io/placeholders/1400x800.png" style="border-bottom-color: rgba(13,110,253,0); text-decoration: none;"><img class="rounded img-fluid border" src="https://cdn.bootstrapstudio.io/placeholders/1400x800.png">
+                                    <h2 class="fs-1 text-center" style="color: rgb(0,0,0);font-family: Adamina, serif;"><span style="background-color: rgba(255, 255, 255, 0);">ㅋㅋㅋ</span></h2>
+                                    <p class="text-center" style="color: rgb(145,147,149);font-family: Adamina, serif;">Paragraph</p>
+                                </a></div>
+                                <div class="col offset-xl-2 offset-xxl-2 item"><a href="https://cdn.bootstrapstudio.io/placeholders/1400x800.png" style="border-bottom-color: rgba(13,110,253,0); text-decoration: none;"><img class="rounded img-fluid border" src="https://cdn.bootstrapstudio.io/placeholders/1400x800.png">
+                                    <h2 class="fs-1 text-center" style="color: rgb(0,0,0);font-family: Adamina, serif;"><span style="background-color: rgba(255, 255, 255, 0);">ㅋㅋㅋ</span></h2>
+                                    <p class="text-center" style="color: rgb(145,147,149);font-family: Adamina, serif;">Paragraph</p>
+                                </a></div>
+                            </div>
+                        </div>
+                    </section>
+                    <hr>
+                    <section class="photo-gallery py-4 py-xl-5">
+                        <div class="container">
+                            <div class="row mb-5">
+                                <div class="col-md-8 col-xl-6 text-center mx-auto" style="text-align: left;">
+                                    <h2 style="text-align: center;font-family: Adamina, serif;"><strong>정기 배송 간단식</strong></h2>
+                                    <p class="w-lg-50"></p>
+                                </div>
+                            </div>
+                            <div class="row gx-2 gy-2 row-cols-1 row-cols-md-2 row-cols-xl-3 photos" data-bss-baguettebox="">
+                                <div class="col offset-xl-1 offset-xxl-1 item"><a href="https://cdn.bootstrapstudio.io/placeholders/1400x800.png" style="border-bottom-color: rgba(13,110,253,0); text-decoration: none;"><img class="rounded img-fluid border" src="https://cdn.bootstrapstudio.io/placeholders/1400x800.png">
+                                    <h2 class="fs-1 text-center" style="color: rgb(0,0,0);font-family: Adamina, serif;"><span style="background-color: rgba(255, 255, 255, 0);">ㅋㅋㅋ</span></h2>
+                                    <p class="text-center" style="color: rgb(145,147,149);font-family: Adamina, serif;">Paragraph</p>
+                                </a></div>
+                                <div class="col offset-xl-2 offset-xxl-2 item"><a href="https://cdn.bootstrapstudio.io/placeholders/1400x800.png" style="border-bottom-color: rgba(13,110,253,0); text-decoration: none;"><img class="rounded img-fluid border" src="https://cdn.bootstrapstudio.io/placeholders/1400x800.png">
+                                    <h2 class="fs-1 text-center" style="color: rgb(0,0,0);font-family: Adamina, serif;"><span style="background-color: rgba(255, 255, 255, 0);">ㅋㅋㅋ</span></h2>
+                                    <p class="text-center" style="color: rgb(145,147,149);font-family: Adamina, serif;">Paragraph</p>
+                                </a></div>
+                            </div>
+                        </div>
+                    </section>
+                </div>
+                <div id="item-1-2" class="tab-pane fade" role="tabpanel" aria-labelledby="item-1-2-tab">
+                    <section class="photo-gallery py-4 py-xl-5">
+                        <div class="container">
+                            <div class="row mb-5">
+                                <div class="col-md-8 col-xl-6 text-center mx-auto" style="text-align: left;">
+                                    <h2 style="text-align: center;font-family: Adamina, serif;"><strong>단품 메뉴</strong></h2>
+                                    <p class="w-lg-50"></p>
+                                </div>
+                            </div>
+                            <div class="row gx-2 gy-2 row-cols-1 row-cols-md-2 row-cols-xl-3 photos" data-bss-baguettebox="">
+                                <div class="col-lg-4 col-xxl-3 offset-xxl-1 item"><a href="https://cdn.bootstrapstudio.io/placeholders/1400x800.png" style="border-bottom-color: rgba(13,110,253,0); text-decoration: none;"><img class="rounded img-fluid border" src="https://cdn.bootstrapstudio.io/placeholders/1400x800.png">
+                                    <h2 class="fs-1 text-center" style="color: rgb(0,0,0);font-family: Adamina, serif;"><span style="background-color: rgba(255, 255, 255, 0);">ㅋㅋㅋ</span></h2>
+                                    <p class="text-center" style="color: rgb(145,147,149);font-family: Adamina, serif;">Paragraph</p>
+                                </a></div>
+                                <div class="col-lg-4 col-xxl-3 offset-xxl-1 item"><a href="https://cdn.bootstrapstudio.io/placeholders/1400x800.png" style="border-bottom-color: rgba(13,110,253,0); text-decoration: none;"><img class="rounded img-fluid border" src="https://cdn.bootstrapstudio.io/placeholders/1400x800.png">
+                                    <h2 class="fs-1 text-center" style="color: rgb(0,0,0);font-family: Adamina, serif;"><span style="background-color: rgba(255, 255, 255, 0);">ㅋㅋㅋ</span></h2>
+                                    <p class="text-center" style="color: rgb(145,147,149);font-family: Adamina, serif;">Paragraph</p>
+                                </a></div>
+                                <div class="col-lg-4 col-xxl-3 offset-xxl-1 item"><a href="https://cdn.bootstrapstudio.io/placeholders/1400x800.png" style="border-bottom-color: rgba(13,110,253,0); text-decoration: none;"><img class="rounded img-fluid border" src="https://cdn.bootstrapstudio.io/placeholders/1400x800.png">
+                                    <h2 class="fs-1 text-center" style="color: rgb(0,0,0);font-family: Adamina, serif;"><span style="background-color: rgba(255, 255, 255, 0);">ㅋㅋㅋ</span></h2>
+                                    <p class="text-center" style="color: rgb(145,147,149);font-family: Adamina, serif;">Paragraph</p>
+                                </a></div>
+                                <div class="col-lg-4 col-xxl-3 offset-xxl-1 item"><a href="https://cdn.bootstrapstudio.io/placeholders/1400x800.png" style="border-bottom-color: rgba(13,110,253,0); text-decoration: none;"><img class="rounded img-fluid border" src="https://cdn.bootstrapstudio.io/placeholders/1400x800.png">
+                                    <h2 class="fs-1 text-center" style="color: rgb(0,0,0);font-family: Adamina, serif;"><span style="background-color: rgba(255, 255, 255, 0);">ㅋㅋㅋ</span></h2>
+                                    <p class="text-center" style="color: rgb(145,147,149);font-family: Adamina, serif;">Paragraph</p>
+                                </a></div>
+                                <div class="col-lg-4 col-xxl-3 offset-xxl-1 item"><a href="https://cdn.bootstrapstudio.io/placeholders/1400x800.png" style="border-bottom-color: rgba(13,110,253,0); text-decoration: none;"><img class="rounded img-fluid border" src="https://cdn.bootstrapstudio.io/placeholders/1400x800.png">
+                                    <h2 class="fs-1 text-center" style="color: rgb(0,0,0);font-family: Adamina, serif;"><span style="background-color: rgba(255, 255, 255, 0);">ㅋㅋㅋ</span></h2>
+                                    <p class="text-center" style="color: rgb(145,147,149);font-family: Adamina, serif;">Paragraph</p>
+                                </a></div>
+                                <div class="col-lg-4 col-xxl-3 offset-xxl-1 item"><a href="https://cdn.bootstrapstudio.io/placeholders/1400x800.png" style="border-bottom-color: rgba(13,110,253,0); text-decoration: none;"><img class="rounded img-fluid border" src="https://cdn.bootstrapstudio.io/placeholders/1400x800.png">
+                                    <h2 class="fs-1 text-center" style="color: rgb(0,0,0);font-family: Adamina, serif;"><span style="background-color: rgba(255, 255, 255, 0);">ㅋㅋㅋ</span></h2>
+                                    <p class="text-center" style="color: rgb(145,147,149);font-family: Adamina, serif;">Paragraph</p>
+                                </a></div>
+                                <div class="col-lg-4 col-xxl-3 offset-xxl-1 item"><a href="https://cdn.bootstrapstudio.io/placeholders/1400x800.png" style="border-bottom-color: rgba(13,110,253,0); text-decoration: none;"><img class="rounded img-fluid border" src="https://cdn.bootstrapstudio.io/placeholders/1400x800.png">
+                                    <h2 class="fs-1 text-center" style="color: rgb(0,0,0);font-family: Adamina, serif;"><span style="background-color: rgba(255, 255, 255, 0);">ㅋㅋㅋ</span></h2>
+                                    <p class="text-center" style="color: rgb(145,147,149);font-family: Adamina, serif;">Paragraph</p>
+                                </a></div>
+                                <div class="col-lg-4 col-xxl-3 offset-xxl-1 item"><a href="https://cdn.bootstrapstudio.io/placeholders/1400x800.png" style="border-bottom-color: rgba(13,110,253,0); text-decoration: none;"><img class="rounded img-fluid border" src="https://cdn.bootstrapstudio.io/placeholders/1400x800.png">
+                                    <h2 class="fs-1 text-center" style="color: rgb(0,0,0);font-family: Adamina, serif;"><span style="background-color: rgba(255, 255, 255, 0);">ㅋㅋㅋ</span></h2>
+                                    <p class="text-center" style="color: rgb(145,147,149);font-family: Adamina, serif;">Paragraph</p>
+                                </a></div>
+                                <div class="col-lg-4 col-xxl-3 offset-xxl-1 item"><a href="https://cdn.bootstrapstudio.io/placeholders/1400x800.png" style="border-bottom-color: rgba(13,110,253,0); text-decoration: none;"><img class="rounded img-fluid border" src="https://cdn.bootstrapstudio.io/placeholders/1400x800.png">
+                                    <h2 class="fs-1 text-center" style="color: rgb(0,0,0);font-family: Adamina, serif;"><span style="background-color: rgba(255, 255, 255, 0);">ㅋㅋㅋ</span></h2>
+                                    <p class="text-center" style="color: rgb(145,147,149);font-family: Adamina, serif;">Paragraph</p>
+                                </a></div>
+                            </div>
+                        </div>
+                    </section>
+                </div>
+            </div>
+        </div>
+    </div>
     </body>
 </th:block>
