--- a/DYEat/src/main/resources/templates/layouts/fragments/Nav.html
+++ b/DYEat/src/main/resources/templates/layouts/fragments/Nav.html
@@ -50,7 +50,7 @@
                 </div>
                 <a th:href="@{/monthfood}" class="nav-item nav-link">이달의 식단</a>
                 <a th:href="@{/event}" class="nav-item nav-link">이벤트</a>
-                <a href="team.html" class="nav-item nav-link">주문하기</a>
+                <a th:href="@{/order}"class="nav-item nav-link">주문하기</a>
                 <a th:href="@{/faq}" class="nav-item nav-link">고객센터</a>
             </div>
         </div>
