--- a/DYEat/src/main/resources/templates/views/mypage/mypage.html
+++ b/DYEat/src/main/resources/templates/views/mypage/mypage.html
@@ -3,31 +3,156 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{/layouts/layout}">
 <th:block layout:fragment="content">
-  <body>
-  <div class="card">
-    <div class="card-header">
-      <ul class="nav nav-tabs card-header-tabs" role="tablist">
-        <li class="nav-item"><a id="item-1-1-tab" class="nav-link active" role="tab" aria-controls="item-1-1" aria-selected="true" href="#item-1-1" data-bs-toggle="tab">First Item</a></li>
-        <li class="nav-item"><a id="item-1-2-tab" class="nav-link" role="tab" aria-controls="item-1-2" aria-selected="false" href="#item-1-2" data-bs-toggle="tab">Second Item</a></li>
-        <li class="nav-item"><a id="item-1-3-tab" class="nav-link" role="tab" aria-controls="item-1-3" aria-selected="false" href="#item-1-3" data-bs-toggle="tab">Third Item</a></li>
-      </ul>
+    <br>
+    <br>
+    <br>
+    <br>
+    <body style="width: 100%;height: 100%;">
+    <div class="d-xxl-flex justify-content-xxl-center">
+        <div class="card d-xxl-flex" style="width: 80%;">
+            <div class="row">
+                <div class="col-md-6 col-xxl-3">
+                    <ul class="nav nav-tabs flex-column" role="tablist" style="width: 100%;">
+                        <li class="nav-item"><a class="nav-link active" id="item-1-1-tab" role="tab"
+                                                aria-controls="item-1-1" aria-selected="true" href="#item-1-1"
+                                                data-bs-toggle="tab">주문 내역</a></li>
+                        <li class="nav-item"><a class="nav-link" id="item-1-2-tab" role="tab" aria-controls="item-1-2"
+                                                aria-selected="false" href="#item-1-2" data-bs-toggle="tab">주문 취소/교환
+                            내역</a></li>
+                        <li class="nav-item"><a class="btn btn-primary" role="button" data-bs-toggle="modal"
+                                                data-bs-target="#exampleModal"
+                                                style="background: rgba(13,110,253,0);color: rgb(13,110,253);border-color: rgba(13,110,253,0);padding-left: 16px;">회원
+                            변경</a></li>
+                        <li class="nav-item"><a class="btn btn-primary" role="button" data-bs-toggle="modal"
+                                                data-bs-target="#exampleModal-1"
+                                                style="background: rgba(13,110,253,0);color: rgb(13,110,253);border-color: rgba(13,110,253,0);padding-left: 16px;">회원
+                            삭제</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-6 col-xxl-9">
+                    <div id="nav-tabContent-1" class="tab-content">
+                        <div id="item-1-1" class="tab-pane fade show active" role="tabpanel"
+                             aria-labelledby="item-1-1-tab">
+                            <div class="container" style="height: 100%;margin: 0px;">
+                                <div class="row">
+                                    <div class="col d-xxl-flex justify-content-xxl-center">
+                                        <div class="text-center border rounded-0 shadow-sm profile-box"
+                                             style="width: 50%;height: 100%;background-color: #ffffff;margin: 5px;">
+                                            <div style="height: 50px;background: rgba(54,162,177,0);"></div>
+                                            <div><img class="rounded-circle" src="assets/img/bg-cta.jpg" width="60px"
+                                                      height="60px"
+                                                      style="background-color: rgb(255,255,255);padding: 2px;"></div>
+                                            <div style="height: 80px;">
+                                                <h4>님 반갑습니다.</h4>
+                                                <p style="font-size: 12px;"></p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <hr style="margin-top: 56px;">
+                                <div class="row">
+                                    <div class="col-md-12">
+                                        <h1 class="d-xxl-flex justify-content-xxl-center" style="margin-top: 22px;">
+                                            주문조회</h1>
+                                        <div class="table-responsive">
+                                            <table class="table">
+                                                <thead>
+                                                <tr>
+                                                    <th>주문 이름</th>
+                                                    <th>날짜</th>
+                                                </tr>
+                                                </thead>
+                                                <tbody>
+                                                <tr>
+                                                    <td style="width: 80%;">Cell 1</td>
+                                                    <td style="text-align: right;">Cell 2</td>
+                                                </tr>
+                                                </tbody>
+                                            </table>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div id="item-1-2" class="tab-pane fade" role="tabpanel" aria-labelledby="item-1-2-tab">
+                            <div class="container" style="height: 100%;margin: 0px;">
+                                <div class="row">
+                                    <div class="col d-xxl-flex justify-content-xxl-center">
+                                        <div class="text-center border rounded-0 shadow-sm profile-box"
+                                             style="width: 50%;height: 100%;background-color: #ffffff;margin: 5px;">
+                                            <div style="height: 50px;background: rgba(54,162,177,0);"></div>
+                                            <div><img class="rounded-circle" src="assets/img/bg-cta.jpg" width="60px"
+                                                      height="60px"
+                                                      style="background-color: rgb(255,255,255);padding: 2px;"></div>
+                                            <div style="height: 80px;">
+                                                <h4>님 반갑습니다.</h4>
+                                                <p style="font-size: 12px;"></p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <hr style="margin-top: 56px;">
+                                <div class="row">
+                                    <div class="col-md-12">
+                                        <h1 class="d-xxl-flex justify-content-xxl-center" style="margin-top: 22px;">
+                                            주문조회</h1>
+                                        <div class="table-responsive">
+                                            <table class="table">
+                                                <thead>
+                                                <tr>
+                                                    <th>주문 이름</th>
+                                                    <th>날짜</th>
+                                                </tr>
+                                                </thead>
+                                                <tbody>
+                                                <tr>
+                                                    <td style="width: 80%;">Cell 1</td>
+                                                    <td style="text-align: right;">Cell 2</td>
+                                                </tr>
+                                                </tbody>
+                                            </table>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="modal fade" role="dialog" tabindex="-1" id="exampleModal" aria-labelledby="exampleModalLabel"
+             aria-hidden="true">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                        <button class="btn-close" type="button" data-bs-dismiss="modal" aria-label="Close"></button>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body"><span> ... </span></div>
+                    <div class="modal-footer">
+                        <button class="btn btn-secondary" type="button" data-bs-dismiss="modal">Close</button>
+                        <button class="btn btn-primary" type="button">Save changes</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="modal fade" role="dialog" tabindex="-1" id="exampleModal-1" aria-labelledby="exampleModalLabel"
+             aria-hidden="true">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLabel-1">회원 삭제 알림</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body"><span>정말 삭제를 하시겠습니까?<br>기존에 주문한 음식들은 환불하기 어렵습니다.<br></span></div>
+                    <div class="modal-footer">
+                        <button class="btn btn-secondary" type="button" data-bs-dismiss="modal">취소</button>
+                        <button class="btn btn-primary" type="button">삭제</button>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-    <div class="card-body">
-      <div id="nav-tabContent" class="tab-content">
-        <div id="item-1-1" class="tab-pane fade show active" role="tabpanel" aria-labelledby="item-1-1-tab">
-          <h4>First Item Title</h4>
-          <p>Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p><button class="btn btn-primary" type="button">Button</button>
-        </div>
-        <div id="item-1-2" class="tab-pane fade" role="tabpanel" aria-labelledby="item-1-2-tab">
-          <h4>Second Item Title</h4>
-          <p>Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p><button class="btn btn-primary" type="button">Button</button>
-        </div>
-        <div id="item-1-3" class="tab-pane fade" role="tabpanel" aria-labelledby="item-1-3-tab">
-          <h4>Third Item Title</h4>
-          <p>Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p><button class="btn btn-primary" type="button">Button</button>
-        </div>
-      </div>
-    </div>
-  </div>
-  </body>
+    </body>
 </th:block>
