--- a/DYEat/src/main/resources/static/assets/scss/bootstrap/scss/_variables.scss
+++ b/DYEat/src/main/resources/static/assets/scss/bootstrap/scss/_variables.scss
@@ -1328,7 +1328,7 @@ $list-group-action-active-bg:       $gray-200 !default;
 // scss-docs-end list-group-variables
 
 
-// Image thumbnails
+// DYE_Images thumbnails
 
 // scss-docs-start thumbnail-variables
 $thumbnail-padding:                 .25rem !default;
