--- a/DYEat/src/main/resources/static/assets/scss/bootstrap/scss/_images.scss
+++ b/DYEat/src/main/resources/static/assets/scss/bootstrap/scss/_images.scss
@@ -10,7 +10,7 @@
 }
 
 
-// Image thumbnails
+// DYE_Images thumbnails
 .img-thumbnail {
   padding: $thumbnail-padding;
   background-color: $thumbnail-bg;
