Service , Repository  회원 가입부분 진행
다음 개발 계획
회원가입 중복검사 , 시큐리티 기능 추가

--- a/DYEat/src/main/resources/templates/layouts/fragments/scripts.html
+++ b/DYEat/src/main/resources/templates/layouts/fragments/scripts.html
@@ -7,5 +7,6 @@
     <script th:src="@{/assets/js/bold-and-bright.js}"></script>
     <script src="https://cdn.datatables.net/1.10.15/js/dataTables.bootstrap.min.js"></script>
     <script th:src="@{/assets/js/Image-Tab-Gallery-Horizontal.js}"></script>
+    <script th:src="@{/assets/js/loginvalid.js}"></script>
 </th:block>
 </html>
