--- a/DYEat/src/main/resources/templates/views/login/login.html
+++ b/DYEat/src/main/resources/templates/views/login/login.html
@@ -42,7 +42,7 @@
             </div>
         </div>
         <div id="login-box-footer" style="padding: 10px 20px;padding-bottom: 23px;padding-top: 18px;">
-            <p style="margin-bottom: 0px;">아이디가 없으신가요?<a id="register-link" href="#">회원가입</a></p>
+            <p style="margin-bottom: 0px;">아이디가 없으신가요?<a id="register-link" th:href="@{/signup}">회원가입</a></p>
         </div>
     </div>
     </body>
