--- a/DYEat/src/main/resources/templates/views/main/index.html
+++ b/DYEat/src/main/resources/templates/views/main/index.html
@@ -42,7 +42,7 @@
                     <h2 style="text-align: left;font-family: Adamina, serif;font-weight: bold;">정기 배송 한정식</h2>
                     <p class="w-lg-50"></p>
                 </div>
-                <div class="col-lg-4 col-xxl-4 d-lg-flex justify-content-lg-end align-items-lg-center" style="text-align: center;"><a href="#" style="text-decoration: none;">
+                <div class="col-lg-4 col-xxl-4 d-lg-flex justify-content-lg-end align-items-lg-center" style="text-align: center;"><a th:href="@{/order}" style="text-decoration: none;">
                     <p style="text-align: center;font-family: Adamina, serif;"><i class="fas fa-plus-square"></i>더보기</p>
                 </a></div>
             </div>
