--- a/DYEat/src/main/resources/templates/views/mypage/mypage.html
+++ b/DYEat/src/main/resources/templates/views/mypage/mypage.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
       layout:decorate="~{/layouts/layout}">
 <th:block layout:fragment="content">
     <br>
@@ -39,12 +40,14 @@
                                         <div class="text-center border rounded-0 shadow-sm profile-box"
                                              style="width: 50%;height: 100%;background-color: #ffffff;margin: 5px;">
                                             <div style="height: 50px;background: rgba(54,162,177,0);"></div>
-                                            <div><img class="rounded-circle" src="assets/img/bg-cta.jpg" width="60px"
+                                            <div sec:authorize="isAuthenticated()"><img class="rounded-circle" th:src="${img}" width="60px"
+                                                                                        height="60px"
+                                                                                        style="background-color: rgb(255,255,255);padding: 2px;"></div>
+                                            <div sec:authorize="!isAuthenticated()"><img class="rounded-circle" src="assets/img/bg-cta.jpg" width="60px"
                                                       height="60px"
                                                       style="background-color: rgb(255,255,255);padding: 2px;"></div>
-                                            <div style="height: 80px;">
-                                                <h4>님 반갑습니다.</h4>
-                                                <p style="font-size: 12px;"></p>
+                                            <div sec:authorize="hasRole('ROLE_USER')" style="height: 80%"  class="text-right">
+                                                <p th:text="|${greeting}님 반갑습니다.|"></p>
                                             </div>
                                         </div>
                                     </div>
