이미지 경로 설정 및 이미지 등록 DB 설정 (미완료) 추가 개발 사항 : 이미지 경로 완성

--- a/DYEat/src/main/resources/templates/layouts/fragments/head.html
+++ b/DYEat/src/main/resources/templates/layouts/fragments/head.html
@@ -26,6 +26,7 @@
         <link rel="stylesheet" th:href="@{/assets/css/Image-Tab-Gallery-Horizontal.css}">
         <link rel="stylesheet" th:href="@{/assets/css/Minimal-tabs-styles.css}">
         <link rel="stylesheet" th:href="@{/assets/css/Minimal-tabs.css}">
+        <link rel="stylesheet" th:href="@{/assets/css/Multi-step-form.css}">
     </head>
 </th:block>
 </html>
