--- a/DYEat/src/main/resources/templates/layouts/fragments/scripts.html
+++ b/DYEat/src/main/resources/templates/layouts/fragments/scripts.html
@@ -8,5 +8,6 @@
     <script src="https://cdn.datatables.net/1.10.15/js/dataTables.bootstrap.min.js"></script>
     <script th:src="@{/assets/js/Image-Tab-Gallery-Horizontal.js}"></script>
     <script th:src="@{/assets/js/loginvalid.js}"></script>
+    <script th:src="@{/assets/js/Multi-step-form.js}"></script>
 </th:block>
 </html>
